syntax = "proto3";

/*import "github.com/yiqinguo/armyant/pkg/models/slave.proto";*/
/*import "/Users/yiqinguo/project/src/github.com/yiqinguo/armyant/pkg/server/models/slave.proto";*/
/*import "k8s.io/apimachinery/pkg/api/resource/generated.proto";*/
package server;


/*option go_package = "github.com/yiqinguo/armyant/pkg/models";*/
/*option objc_class_prefix = "HLW";*/

import "github.com/yiqinguo/armyant/pkg/models/slave.proto";
import "github.com/yiqinguo/armyant/pkg/models/master.proto";

// The greeting service definition.
service Apiserver {
  // Sends a greeting
  /*rpc CreateJob (models.Job) returns (Response) {}*/
  rpc ReportResult (models.Stats) returns (Response) {}
  rpc ReportStatus (models.Status) returns (Response) {}
  rpc CreateJob (models.Job) returns (Response) {}
  rpc ListJobs (models.ListJobRequest) returns (Response) {}
  rpc GetJob (models.GetJobRequest) returns (models.JobResultResponse) {}
  rpc GetJobResult (models.GetJobRequest) returns (models.JobResultResponse) {}
  rpc UpdateJob (models.Job) returns (Response) {}
}

// The request message containing the user's name.
/*message HelloRequest {
  string name = 1;
  models.Job job = 2;
}*/

// The response message containing the greetings
message Response {
  int64 code = 1;
  string message = 2;
}
